// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Store Package Returns element instance by element id 1`] = `
DFlexNode {
  "animatedFrame": null,
  "depth": 0,
  "id": "id-0",
  "isPaused": false,
  "isVisible": true,
  "keys": Object {
    "CHK": null,
    "PK": "1-0",
    "SK": "0-0",
  },
  "order": Object {
    "parent": 0,
    "self": 0,
  },
  "readonly": false,
}
`;

exports[`Testing Store Package Snaps shot registry 1`] = `
Map {
  "id-0" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-0",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
  },
  "id-1" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-1",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "readonly": false,
  },
  "id-2" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-2",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "readonly": false,
  },
  "p-id-0" => DFlexNode {
    "animatedFrame": null,
    "depth": 1,
    "id": "p-id-0",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": "0-0",
      "PK": "2-0",
      "SK": "1-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
  },
}
`;

exports[`Testing Store Package Snaps shot registry after delete 1`] = `
Map {
  "id-0" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-0",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
  },
  "id-1" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-1",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "readonly": false,
  },
  "id-2" => DFlexNode {
    "animatedFrame": null,
    "depth": 0,
    "id": "id-2",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "readonly": false,
  },
  "p-id-0" => DFlexNode {
    "animatedFrame": null,
    "depth": 1,
    "id": "p-id-0",
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": "0-0",
      "PK": "2-0",
      "SK": "1-0",
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "readonly": false,
  },
}
`;
